new enum screen, fix list&map saving